--- a/TeacherFox/app/src/main/res/values/strings.xml
+++ b/TeacherFox/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Teacher Fox</string>
     <string name="welcome">Bem vindo \n ao \n Teacher Fox!</string>
+    <string name="jogorapido">Jogo Rápido</string>
+    <string name="estudar">Estudar</string>
 </resources>
