--- a/TeacherFox/app/src/main/res/values/strings.xml
+++ b/TeacherFox/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="welcome">Bem vindo \n ao \n Teacher Fox!</string>
     <string name="jogorapido">Jogo Rápido</string>
     <string name="estudar">Estudar</string>
+    <string name="opcoes">Opções</string>
 </resources>
