--- a/TeacherFox/app/src/main/res/values/strings.xml
+++ b/TeacherFox/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="welcome">Bem vindo ao Teacher Fox!</string>
     <string name="jogorapido">Jogo Rápido</string>
     <string name="estudar">Estudar</string>
-    <string name="opcoes">Opções</string>
+    <string name="opcoes">Loja</string>
 </resources>
